<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.foodorder.client.RestListActivity" >

	<item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/txtCart"/>
    <item
        android:id="@+id/action_order"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/txtOrder"/>
    <item
        android:id="@+id/action_userinfo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/txtUser"/>
    
    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:visible="false"
        android:showAsAction="withText|ifRoom" />
    
    <item android:id="@+id/action_login"
        android:title="@string/login"
        android:showAsAction="withText|ifRoom" />
    
    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Reg"/>
</menu>
