<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.foodorder.client.ShoppingCart" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_order"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/txtOrder"/>
    <item
        android:id="@+id/action_login"
        android:showAsAction="withText|ifRoom"
        android:title="@string/login"/>
    <item
        android:id="@+id/action_user_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/txtUser"/>

</menu>