<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/catebg" >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"  >

    <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10sp"
      android:text="@string/RegisterT"
      android:textSize="20sp" />
    
	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textView1"
		android:layout_marginTop="18sp"
		android:text="@string/info1"
		android:textSize="14sp"
		/>

	<EditText
	    android:id="@+id/txtUser"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/textView2"
	    android:layout_marginLeft="50sp"
	    android:layout_marginStart="50sp"
	    android:layout_toEndOf="@+id/textView2"
	    android:layout_toRightOf="@+id/textView2"
	    android:ems="6"
	    android:inputType="text"
	    android:textSize="14sp" >
       
      <requestFocus />
	</EditText> 
	
	<Button
	    android:id="@+id/btnCheck"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@id/txtUser"
	    android:layout_marginLeft="5sp"
	    android:layout_marginStart="5sp"
	    android:layout_toEndOf="@id/txtUser"
	    android:layout_toRightOf="@id/txtUser"
	    android:text="Check it"
	    android:textSize="12sp" />

   <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@id/textView2"
      android:layout_alignStart="@id/textView2"
      android:layout_below="@id/textView2"
      android:layout_marginTop="18dp"
      android:text="@string/password"
      android:textSize="14sp"
      />

   <EditText
      android:id="@+id/txtPassword1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@id/textView3"
      android:layout_alignLeft="@id/txtUser"
      android:layout_alignStart="@id/txtUser"
      android:ems="10"
      android:textSize="14sp"
      android:inputType="textPassword" />
   
   <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@id/textView2"
      android:layout_alignStart="@id/textView2"
      android:layout_below="@id/textView3"
      android:layout_marginTop="14sp"
      android:text="@string/passV"
      android:textSize="14sp"
      />

   <EditText
      android:id="@+id/txtPassword2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@id/textView9"
      android:layout_alignLeft="@id/txtUser"
      android:layout_alignStart="@id/txtUser"
      android:ems="10"
      android:inputType="textPassword" 
      android:textSize="14sp"/>
   
   <TextView
      android:id="@+id/txtInvalid"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@id/txtPassword2"
      android:layout_alignStart="@id/txtPassword2"
      android:layout_below="@id/txtPassword2"
      android:layout_marginTop="12sp"
      android:text="Passwords are not same!"
      android:visibility="gone"
      android:textSize="12sp"
      
      android:textColor="#FF0000"
      />
   
   
   
   <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@id/textView3"
      android:layout_alignStart="@id/textView3"
      android:layout_below="@+id/txtInvalid"
      android:layout_marginTop="18dp"
      android:text="@string/email"
      android:textSize="14sp"
      />
   

   
   <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@id/textView5"
      android:layout_alignStart="@id/textView5"
      android:layout_below="@+id/textView5"
      android:layout_marginTop="18dp"
      android:text="@string/phone"
      android:textSize="14sp"
      />

   <EditText
       android:id="@+id/txtEmail"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@id/textView5"
       android:layout_alignLeft="@id/txtPassword1"
       android:layout_alignStart="@id/txtPassword1"
       android:ems="10"
       android:textSize="14sp"
       android:inputType="textEmailAddress" />

   <EditText
       android:id="@+id/txtPhone"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@id/txtEmail"
       android:layout_alignStart="@id/txtEmail"
       android:layout_alignBottom="@+id/textView7"
       android:inputType="phone"
       android:textSize="14sp"
       android:ems="10" />
   
   
	<Button
		android:id="@+id/btnUpdate"
		android:layout_below="@+id/txtPhone"
		android:layout_alignLeft="@id/txtEmail"
		android:layout_alignStart="@id/txtEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:layout_marginTop="30dp"
		android:text="@string/title_activity_register" />
	
	<Button
		android:id="@+id/btnCancel"
		android:layout_below="@+id/txtPhone"
		android:layout_toLeftOf="@id/btnUpdate"
		android:layout_toStartOf="@id/btnUpdate"
		android:textSize="16sp"
		android:layout_marginTop="30dp"
		android:layout_marginRight="20sp"
		android:layout_marginEnd="20sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/cancel" />

</RelativeLayout>
</ScrollView>
