<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/catebg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/plzconfirm" />

        <ListView
            android:id="@+id/orderlist"
            android:layout_width="wrap_content"
            android:layout_height="319dp"
            android:scrollbars="vertical|horizontal" >
        </ListView>
    </LinearLayout>
    
    <TableLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end|top"
		android:layout_marginTop="10sp"
		android:layout_marginLeft="10sp"
		android:layout_marginRight="10sp">
		
		<TableRow
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="end|top"
		    android:layout_marginTop="2sp"
		    android:layout_marginBottom="2sp">
		
		    <TextView
				android:id="@+id/txtNet"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end|top"
				android:text="@string/net"
				android:textSize="16sp"
				android:textStyle="bold" 
				android:layout_column="1"/>
		    <TextView
		        android:id="@+id/txtNetAmt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/net"
				android:textSize="16sp"
				android:textStyle="bold" 
				android:layout_marginLeft="10sp"
				android:layout_marginStart="10sp"
				android:layout_column="2"/>
		</TableRow>
		
		<TableRow
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="end|top"
		    android:layout_marginTop="2sp"
		    android:layout_marginBottom="2sp">
		
		    <TextView
				android:id="@+id/txtHst"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end|top"
				android:text="@string/hst"
				android:textSize="16sp"
				android:textStyle="bold" 
				android:layout_column="1"/>
		    <TextView
		        android:id="@+id/txtHstAmt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/hst"
				android:textSize="16sp"
				android:textStyle="bold" 
				android:layout_marginLeft="10sp"
				android:layout_marginStart="10sp"
				android:layout_column="2"/>
		</TableRow>
		<TableRow
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="end|top"
		    android:layout_marginTop="2sp"
		    android:layout_marginBottom="2sp">
		
		    <TextView
				android:id="@+id/txtTotal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end|top"
				android:text="@string/gross"
				android:textSize="16sp"
				android:textStyle="bold" 
				android:layout_column="1"/>
		    <TextView
		        android:id="@+id/txtTotalAmt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/gross"
				android:textSize="16sp"
				android:textStyle="bold" 
				android:layout_marginLeft="10sp"
				android:layout_marginStart="10sp"
				android:layout_column="2"/>
		</TableRow>
	</TableLayout>
	
    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="cancelOrder"
            android:text="Cancel" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="submitOrder"
            android:text="Submit" />
    </RelativeLayout>

</LinearLayout>
